--- a/src/main/resources/templates/hello2.html
+++ b/src/main/resources/templates/hello2.html
@@ -36,6 +36,107 @@
         <button type="submit">KOREAN</button>
     </form>
     
+    <div class="well">
+       <input type="text" id="msg" size="50" class="form-control" value="하" placeholder="Message..." />
+       <a href="#" id="btnSend" class="btn btn-default">SendMessage</a>
+    </div>
     
+<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+
+<!-- <script src="http://cdn.sockjs.org/sockjs-0.3.4.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.3.0/sockjs.min.js"></script>
+<!-- <script src="/webjars/sockjs-client/sockjs.min.js"></script>
+<script src="webjars/stomp-websocket/stomp.min.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<script>
+$(document).ready( function() {
+	console.log("ttttttttttttttt")
+	//setWebsocket();
+	//setSockJs();
+	setStomp();
+	
+	$('#btnSend').on('click', function(evt) {
+        evt.preventDefault();
+        console.log("QQQQQQ>>", socket)
+        if (!isStomp && socket.readyState !== 1)
+            return;
+        
+        let msg = $('input#msg').val();
+        if (!msg)
+            return alert("메시지 내용을 입력하세요!!");
+        
+        if (isStomp)
+        	socket.send('/TTT', {idd:123455}, msg);
+        else
+            socket.send(msg);
+    });
+});
+
+var socket = null, isStomp = false;
+
+function setStomp() {
+	var sock = new SockJS("/stompTest");
+    var client = Stomp.over(sock);
+    socket = client;
+    isStomp = true;
+    
+    client.connect({}, function () {
+    	console.log("Connected stompTest!");
+        client.send('/TTT', {}, "msg: Haha~~~"); //send(path, header, message) 
+
+        client.subscribe('/topic/message', function (event) {
+        	console.log("!!!!!!!!!!!!event>>", event)
+        	console.log("event.body>>", event.body)
+        });
+    });
+}
+
+function setSockJs() {
+	var sock = new SockJS("/replyEcho");
+
+    sock.onopen = function () {
+    	console.log('Info: connection opened.');
+        sock.send("hi~");
+        socket = sock;
+        
+        // onmessage : message를 받았을 때의 callback
+        sock.onmessage = function (event) {
+        	console.log(event.data+'\n');
+        };
+        
+        sock.onclose = function (event) {
+            console.log('Info: connection closed.');
+        };
+    };
+}
+
+function setWebsocket() {
+    var ws = new WebSocket("ws://localhost:9090/replyEcho?bno=1234");
+    ws.onopen = function () {
+        console.log('Info: connection opened.');
+        ws.send("hi~");
+        socket = ws;
+    };
+    ws.onmessage = function (event) {
+        console.log(event.data+'\n');
+    };
+    ws.onclose = function (event) {
+        console.log('Info: connection closed.');
+        setTimeout(function() {
+        	setWebsocket();
+        }, 1000);
+        ws.close();
+    };
+    ws.onerror = function(err) {
+        console.error('Socket encountered error: ', err.message, 'Closing socket');
+        ws.close();
+    };
+
+}
+
+</script>    
 </body>
 </html>
